Revision history for Perl extension Alien::Prototype::Window.

    - added POD coverage tests

1.3.1   Sun Sep 30 13:28 PDT 2007
    - added POD docs to Alien::Prototype::Window
    - added "--quiet" command line argument to "prototype-window-install".
    - changed versioning to "${PWC_version}.${alien_release}", so that releases
      could be issued out of sync with upstream PWC.

1.3     Tue Jul 17 20:56 PDT 2007
    - First public version.  Installs PWC 1.3