@@ -6,10 +6,12 @@ package Alien::Prototype::Window;
 use strict;
 use warnings;
 use Carp;
+use File::Spec;
 use File::Copy qw(copy);
 use File::Path qw(mkpath);
 use File::Find qw(find);
 use File::Basename qw(dirname);
+use Alien::scriptaculous;
 
 ###############################################################################
 # Version number
@@ -41,6 +43,54 @@ sub path {
 }
 
 ###############################################################################
+# Subroutine:   to_blib()
+###############################################################################
+# Returns a hash containing paths to the soure files to be copied, and their
+# relative destinations.
+###############################################################################
+sub to_blib {
+    my $class = shift;
+    my $path  = $class->path();
+    my %blib;
+
+    # JS files
+    my @js = qw( window window_ext window_effects tooltip debug extended_debug );
+    foreach my $file (@js) {
+        $file .= '.js';
+        my $src = File::Spec->catfile( $path, 'javascripts', $file );
+        $blib{$src} = $file;
+    }
+
+    # themes
+    my $themedir = File::Spec->catdir( $path, 'themes' );
+    File::Find::find (
+        sub {
+            -f $_ && do {
+                my $dstdir = $File::Find::dir;
+                $dstdir =~ s{^$themedir}{};
+                $dstdir =~ s{^/}{};
+                $blib{$File::Find::name} = File::Spec->catfile('window', $dstdir, $_);
+            }
+        },
+        $themedir
+        );
+
+    # return list of files to install
+    return %blib;
+}
+
+###############################################################################
+# Subroutine:   files()
+###############################################################################
+# Returns the lsit of files that are installed by Alien::Prototype::Window.
+###############################################################################
+sub files {
+    my $class = shift;
+    my %blib  = $class->to_blib();
+    return sort values %blib;
+}
+
+###############################################################################
 # Subroutine:   install($destdir)
 # Parameters:   $destdir    - Destination directory
 ###############################################################################
@@ -49,34 +99,22 @@ sub path {
 ###############################################################################
 sub install {
     my ($class, $destdir) = @_;
-    if (!-d $destdir) {
-        mkpath( [$destdir] ) || croak "can't create '$destdir'; $!";
-    }
-    my $path = $class->path();
 
-    # Install JS files
-    my @files = grep { -f $_ } glob "$path/javascripts/*.js";
-    foreach my $file (@files) {
-        copy( $file, $destdir ) || croak "can't copy '$file' to '$destdir'; $!";
-    }
+    # install script.aculo.us
+    Alien::scriptaculous->install( $destdir );
 
-    # Install theme files
-    my $theme_srcdir  = "$path/themes";
-    my $theme_destdir = "$destdir/window";
-    @files = ();
-    File::Find::find(
-        sub { -f $_ && push(@files, $File::Find::name) },
-        $theme_srcdir
-        );
-    foreach my $file (@files) {
-        my $destfile = $file;
-        $destfile =~ s{$theme_srcdir}{$theme_destdir};
-
-        my $destpath = dirname( $destfile );
-        if (!-d $destpath) {
-            mkpath( [$destpath] ) || croak "can't create '$destpath'; $!";
+    # install our files
+    my %blib = $class->to_blib();
+    while (my ($srcfile, $dest) = each %blib) {
+        # get full path to destination file
+        my $destfile = File::Spec->catfile( $destdir, $dest );
+        # create any required install directories
+        my $instdir = dirname( $destfile );
+        if (!-d $instdir) {
+            mkpath( $instdir ) || croak "can't create '$instdir'; $!";
         }
-        copy( $file, $destpath ) || croak "can't copy '$file' to '$destpath'; $!";
+        # install the file
+        copy( $srcfile, $destfile ) || croak "can't copy '$srcfile' to '$instdir'; $!";
     }
 }
 
@@ -114,6 +152,15 @@ Not to be confused with the C<Alien::Prototype::Window> version number
 
 Returns the path to the available copy of Prototype Window Class. 
 
+=item to_blib()
+
+Returns a hash containing paths to the soure files to be copied, and their
+relative destinations. 
+
+=item files()
+
+Returns the lsit of files that are installed by Alien::Prototype::Window. 
+
 =item install($destdir)
 
 Installs the Prototype Window Class into the given C<$destdir>. Throws a
@@ -134,6 +181,7 @@ This is free software; you can redistribute it and/or modify it under the same t
 =head1 SEE ALSO
 
 http://prototype-window.xilinus.com/,
+L<Alien::scriptaculous>,
 L<Alien>.
 
 =cut
