@@ -1,6 +1,8 @@
 Revision history for Perl extension Alien::Prototype::Window.
 
     - added POD coverage tests
+    - now depends on Alien::scriptaculous, instead of using the version that
+      came bundled with PWC.
 
 1.3.1   Sun Sep 30 13:28 PDT 2007
     - added POD docs to Alien::Prototype::Window
